--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.2.2",
+    "react-twitter-login": "^1.3.0",
     "sass": "^1.26.10",
     "typeface-nunito-sans": "0.0.72",
     "typeface-roboto": "0.0.75"
