--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "bootstrap": "^4.6.0",
+    "cookies": "^0.8.0",
     "cookies-next": "^1.1.3",
     "isomorphic-dompurify": "^0.7.0",
     "match-sorter": "^4.2.0",
@@ -23,6 +24,7 @@
     "next-auth": "^3.5.1",
     "next-cookies": "^2.0.3",
     "next-images": "^1.4.1",
+    "nookies": "^2.5.2",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-contenteditable": "^3.3.5",
